--- a/berita.html
+++ b/berita.html
@@ -39,7 +39,7 @@
       <div class="container">
         <div class="row mb-3">
           <div class="col-12">
-            <h5>GALERY</h5>
+            <h5>NEWS</h5>
           </div>
         </div>
         <div class="row">
