--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="/frontend/images/image1.jpg"
+              src="frontend/images/image1.jpg"
               class="d-block w-100"
               alt="..."
             />
@@ -119,7 +119,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="/frontend/images/image2.jpg"
+              src="frontend/images/image2.jpg"
               class="d-block w-100"
               alt="..."
             />
@@ -130,7 +130,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="/frontend/images/image3.jpg"
+              src="frontend/images/image3.jpg"
               class="d-block w-100"
               alt="..."
             />
@@ -176,32 +176,32 @@
             <div id="link" class="owl-carousel">
               <div class="figure-img">
                 <img
-                  src="/frontend/images/image1.jpg"
+                  src="frontend/images/image1.jpg"
                   class="figure-img img-fluid"
                 />
               </div>
 
               <div class="figure-img">
                 <img
-                  src="/frontend/images/image2.jpg"
+                  src="frontend/images/image2.jpg"
                   class="figure-img img-fluid"
                 />
               </div>
               <div class="figure-img">
                 <img
-                  src="/frontend/images/image3.jpg"
+                  src="frontend/images/image3.jpg"
                   class="figure-img img-fluid"
                 />
               </div>
               <div class="figure-img">
                 <img
-                  src="/frontend/images/image4.jpg"
+                  src="frontend/images/image4.jpg"
                   class="figure-img img-fluid"
                 />
               </div>
               <div class="figure-img">
                 <img
-                  src="/frontend/images/image5.jpg"
+                  src="frontend/images/image5.jpg"
                   class="figure-img img-fluid"
                 />
               </div>
@@ -224,7 +224,7 @@
             <div id="news-slider" class="owl-carousel">
               <div class="news-grid">
                 <div class="news-grid-image">
-                  <img src="/frontend/images/image3.jpg" />
+                  <img src="frontend/images/image3.jpg" />
                   <div class="news-grid-box">
                     <h1>19</h1>
                     <p>Sep</p>
@@ -252,7 +252,7 @@
               </div>
               <div class="news-grid">
                 <div class="news-grid-image">
-                  <img src="/frontend/images/image2.jpg" />
+                  <img src="frontend/images/image2.jpg" />
                   <div class="news-grid-box">
                     <h1>19</h1>
                     <p>Sep</p>
@@ -281,7 +281,7 @@
 
               <div class="news-grid">
                 <div class="news-grid-image">
-                  <img src="/frontend/images/image3.jpg" />
+                  <img src="frontend/images/image3.jpg" />
                   <div class="news-grid-box">
                     <h1>19</h1>
                     <p>Sep</p>
@@ -309,7 +309,7 @@
               </div>
               <div class="news-grid">
                 <div class="news-grid-image">
-                  <img src="/frontend/images/image5.jpg" />
+                  <img src="frontend/images/image5.jpg" />
                   <div class="news-grid-box">
                     <h1>19</h1>
                     <p>Sep</p>
@@ -337,7 +337,7 @@
               </div>
               <div class="news-grid">
                 <div class="news-grid-image">
-                  <img src="/frontend/images/image4.jpg" />
+                  <img src="frontend/images/image4.jpg" />
                   <div class="news-grid-box">
                     <h1>19</h1>
                     <p>Sep</p>
@@ -365,7 +365,7 @@
               </div>
               <div class="news-grid">
                 <div class="news-grid-image">
-                  <img src="/frontend/images/image5.jpg" />
+                  <img src="frontend/images/image5.jpg" />
                   <div class="news-grid-box">
                     <h1>19</h1>
                     <p>Sep</p>
@@ -418,10 +418,10 @@
               <div class="news-thumbnail">
                 <div
                   class="news-image"
-                  style="background-image: url('/frontend/images/image1.jpg')"
+                  style="background-image: url('frontend/images/image1.jpg')"
                 >
                   <a
-                    href="/frontend/images/image1.jpg"
+                    href="frontend/images/image1.jpg"
                     data-gall="Gallery"
                     class="venobox d-flex justify-content-center"
                   >
@@ -435,10 +435,10 @@
               <div class="news-thumbnail">
                 <div
                   class="news-image"
-                  style="background-image: url('/frontend/images/image5.jpg')"
+                  style="background-image: url('frontend/images/image5.jpg')"
                 >
                   <a
-                    href="/frontend/images/image5.jpg"
+                    href="frontend/images/image5.jpg"
                     data-gall="Gallery"
                     class="venobox d-flex justify-content-center"
                   ></a>
@@ -451,10 +451,10 @@
               <div class="news-thumbnail">
                 <div
                   class="news-image"
-                  style="background-image: url('/frontend/images/image2.jpg')"
+                  style="background-image: url('frontend/images/image2.jpg')"
                 >
                   <a
-                    href="/frontend/images/image2.jpg"
+                    href="frontend/images/image2.jpg"
                     data-gall="Gallery"
                     class="venobox d-flex justify-content-center"
                   ></a>
@@ -467,10 +467,10 @@
               <div class="news-thumbnail">
                 <div
                   class="news-image"
-                  style="background-image: url('/frontend/images/image5.jpg')"
+                  style="background-image: url('frontend/images/image5.jpg')"
                 >
                   <a
-                    href="/frontend/images/image5.jpg"
+                    href="frontend/images/image5.jpg"
                     data-gall="Gallery"
                     class="venobox d-flex justify-content-center"
                   ></a>
@@ -483,10 +483,10 @@
               <div class="news-thumbnail">
                 <div
                   class="news-image"
-                  style="background-image: url('/frontend/images/image3.jpg')"
+                  style="background-image: url('frontend/images/image3.jpg')"
                 >
                   <a
-                    href="/frontend/images/image3.jpg"
+                    href="frontend/images/image3.jpg"
                     data-gall="Gallery"
                     class="venobox d-flex justify-content-center"
                   ></a>
@@ -499,10 +499,10 @@
               <div class="news-thumbnail">
                 <div
                   class="news-image"
-                  style="background-image: url('/frontend/images/image4.jpg')"
+                  style="background-image: url('frontend/images/image4.jpg')"
                 >
                   <a
-                    href="/frontend/images/image4.jpg"
+                    href="frontend/images/image4.jpg"
                     data-gall="Gallery"
                     class="venobox d-flex justify-content-center"
                   ></a>
@@ -515,10 +515,10 @@
               <div class="news-thumbnail">
                 <div
                   class="news-image"
-                  style="background-image: url('/frontend/images/image4.jpg')"
+                  style="background-image: url('frontend/images/image4.jpg')"
                 >
                   <a
-                    href="/frontend/images/image4.jpg"
+                    href="frontend/images/image4.jpg"
                     data-gall="Gallery"
                     class="venobox d-flex justify-content-center"
                   ></a>
@@ -531,10 +531,10 @@
               <div class="news-thumbnail">
                 <div
                   class="news-image"
-                  style="background-image: url('/frontend/images/image5.jpg')"
+                  style="background-image: url('frontend/images/image5.jpg')"
                 >
                   <a
-                    href="/frontend/images/image5.jpg"
+                    href="frontend/images/image5.jpg"
                     data-gall="Gallery"
                     class="venobox d-flex justify-content-center"
                   ></a>
@@ -547,10 +547,10 @@
               <div class="news-thumbnail">
                 <div
                   class="news-image"
-                  style="background-image: url('/frontend/images/image4.jpg')"
+                  style="background-image: url('frontend/images/image4.jpg')"
                 >
                   <a
-                    href="/frontend/images/image4.jpg"
+                    href="frontend/images/image4.jpg"
                     data-gall="Gallery"
                     class="venobox d-flex justify-content-center"
                   ></a>
