--- a/index.html
+++ b/index.html
@@ -242,11 +242,13 @@
                       <i class="icofont-ui-user" aria-hidden="true"></i> Admin
                     </li>
                   </ul>
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
-                    Consequuntur aspernatur reprehenderit velit est voluptatum,
-                    voluptas amet quasi dicta consectetur.
-                  </p>
+                  <div class="news-over">
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                      Consequuntur aspernatur reprehenderit velit est
+                      voluptatum, voluptas amet quasi dicta consectetur.
+                    </p>
+                  </div>
                   <a href="#">Read More...</a>
                 </div>
               </div>
@@ -270,11 +272,13 @@
                       <i class="icofont-ui-user" aria-hidden="true"></i> Admin
                     </li>
                   </ul>
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
-                    Consequuntur aspernatur reprehenderit velit est voluptatum,
-                    voluptas amet quasi dicta consectetur.
-                  </p>
+                  <div class="news-over">
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                      Consequuntur aspernatur reprehenderit velit est
+                      voluptatum, voluptas amet quasi dicta consectetur.
+                    </p>
+                  </div>
                   <a href="#">Read More...</a>
                 </div>
               </div>
@@ -299,11 +303,13 @@
                       <i class="icofont-ui-user" aria-hidden="true"></i> Admin
                     </li>
                   </ul>
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
-                    Consequuntur aspernatur reprehenderit velit est voluptatum,
-                    voluptas amet quasi dicta consectetur.
-                  </p>
+                  <div class="news-over">
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                      Consequuntur aspernatur reprehenderit velit est
+                      voluptatum, voluptas amet quasi dicta consectetur.
+                    </p>
+                  </div>
                   <a href="#">Read More...</a>
                 </div>
               </div>
@@ -327,11 +333,13 @@
                       <i class="icofont-ui-user" aria-hidden="true"></i> Admin
                     </li>
                   </ul>
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
-                    Consequuntur aspernatur reprehenderit velit est voluptatum,
-                    voluptas amet quasi dicta consectetur.
-                  </p>
+                  <div class="news-over">
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                      Consequuntur aspernatur reprehenderit velit est
+                      voluptatum, voluptas amet quasi dicta consectetur.
+                    </p>
+                  </div>
                   <a href="#">Read More...</a>
                 </div>
               </div>
@@ -355,11 +363,13 @@
                       <i class="icofont-ui-user" aria-hidden="true"></i> Admin
                     </li>
                   </ul>
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
-                    Consequuntur aspernatur reprehenderit velit est voluptatum,
-                    voluptas amet quasi dicta consectetur.
-                  </p>
+                  <div class="news-over">
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                      Consequuntur aspernatur reprehenderit velit est
+                      voluptatum, voluptas amet quasi dicta consectetur.
+                    </p>
+                  </div>
                   <a href="#">Read More...</a>
                 </div>
               </div>
@@ -383,11 +393,13 @@
                       <i class="icofont-ui-user" aria-hidden="true"></i> Admin
                     </li>
                   </ul>
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
-                    Consequuntur aspernatur reprehenderit velit est voluptatum,
-                    voluptas amet quasi dicta consectetur.
-                  </p>
+                  <div class="news-over">
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                      Consequuntur aspernatur reprehenderit velit est
+                      voluptatum, voluptas amet quasi dicta consectetur.
+                    </p>
+                  </div>
                   <a href="#">Read More...</a>
                 </div>
               </div>
