--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
                       voluptatum, voluptas amet quasi dicta consectetur.
                     </p>
                   </div>
+                  <div class="dropdown-divider"></div>
                   <a href="#">Read More...</a>
                 </div>
               </div>
@@ -279,6 +280,7 @@
                       voluptatum, voluptas amet quasi dicta consectetur.
                     </p>
                   </div>
+                  <div class="dropdown-divider"></div>
                   <a href="#">Read More...</a>
                 </div>
               </div>
@@ -310,6 +312,7 @@
                       voluptatum, voluptas amet quasi dicta consectetur.
                     </p>
                   </div>
+                  <div class="dropdown-divider"></div>
                   <a href="#">Read More...</a>
                 </div>
               </div>
@@ -340,6 +343,7 @@
                       voluptatum, voluptas amet quasi dicta consectetur.
                     </p>
                   </div>
+                  <div class="dropdown-divider"></div>
                   <a href="#">Read More...</a>
                 </div>
               </div>
@@ -370,6 +374,7 @@
                       voluptatum, voluptas amet quasi dicta consectetur.
                     </p>
                   </div>
+                  <div class="dropdown-divider"></div>
                   <a href="#">Read More...</a>
                 </div>
               </div>
@@ -400,6 +405,7 @@
                       voluptatum, voluptas amet quasi dicta consectetur.
                     </p>
                   </div>
+                  <div class="dropdown-divider"></div>
                   <a href="#">Read More...</a>
                 </div>
               </div>
