--- a/berita.html
+++ b/berita.html
@@ -35,7 +35,7 @@
     </header>
     <!-- header -->
     <!-- content -->
-    <section class="section-galery" style="padding-top: 120px">
+    <section class="section-galery news-menu">
       <div class="container">
         <div class="row mb-3">
           <div class="col-12">
@@ -221,7 +221,7 @@
             <li class="drop-down">
               <a href="">Akademik</a>
               <ul>
-                <li><a href="#">Galeri</a></li>
+                <li><a href="galery.html">Galeri</a></li>
                 <li><a href="#">Testimoni</a></li>
                 <li><a href="#">Animo & Daya Tampung</a></li>
                 <li><a href="#">Biaya Pendidikan</a></li>
@@ -246,7 +246,7 @@
     </div>
 
     <!-- navbar -->
-    <footer class="section-footer mt-5 mb-4 border-top">
+    <footer class="section-footer mb-4 border-top">
       <div class="container pt-5 pb-5">
         <div class="row justify-content-center">
           <div class="col-12">
