--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <li class="drop-down">
               <a href="">Akademik</a>
               <ul>
-                <li><a href="#">Galeri</a></li>
+                <li><a href="galery.html">Galeri</a></li>
                 <li><a href="#">Testimoni</a></li>
                 <li><a href="#">Animo & Daya Tampung</a></li>
                 <li><a href="#">Biaya Pendidikan</a></li>
@@ -588,7 +588,7 @@
     </section>
 
     <!-- GALERY -->
-    <footer class="section-footer mt-5 mb-4 border-top">
+    <footer class="section-footer mb-4 border-top">
       <div class="container pt-5 pb-5">
         <div class="row justify-content-center">
           <div class="col-12">
