--- a/sejarah.html
+++ b/sejarah.html
@@ -63,7 +63,7 @@
             <li class="drop-down">
               <a href="">Akademik</a>
               <ul>
-                <li><a href="#">Galeri</a></li>
+                <li><a href="galery.html">Galeri</a></li>
                 <li><a href="#">Testimoni</a></li>
                 <li><a href="#">Animo & Daya Tampung</a></li>
                 <li><a href="#">Biaya Pendidikan</a></li>
@@ -92,13 +92,13 @@
     <section class="section-sejarah">
       <div class="container">
         <div class="row">
-          <div class="col-12">
+          <div class="col-lg-9 col-6">
             <h5>SEJARAH</h5>
           </div>
         </div>
         <div class="row">
           <div class="col-12">
-            <p>
+            <p class="text-justify">
               "Sed ut perspiciatis unde omnis iste natus error sit voluptatem
               accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
               quae ab illo inventore veritatis et quasi architecto beatae vitae
@@ -145,7 +145,7 @@
         </div>
       </div>
     </section>
-    <footer class="section-footer mt-5 mb-4 border-top">
+    <footer class="section-footer mb-4 border-top">
       <div class="container pt-5 pb-5">
         <div class="row justify-content-center">
           <div class="col-12">
@@ -185,7 +185,23 @@
                   </li>
                 </ul>
               </div>
-              <div class="col-12 col-lg-6">
+              <div class="col-12 col-lg-3">
+                <h5>SOCIAL MEDIA</h5>
+                <ul class="list-unstyled">
+                  <li>
+                    <a href=" "
+                      ><i class="icofont-instagram"></i> stipjakarta</a
+                    >
+                  </li>
+                  <li>
+                    <a href=" "><i class="icofont-facebook"></i> stipjakarta</a>
+                  </li>
+                  <li>
+                    <a href=" "><i class="icofont-twitter"> stipjakarta</i></a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-12 col-lg-3">
                 <h5>LOCATION</h5>
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.6887123064917!2d106.75158631431097!3d-6.304567863454402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ef103911afdd%3A0xaa8cbd97d3e66313!2sHANASTI%20%26%20REKAN!5e0!3m2!1sid!2sid!4v1594569142660!5m2!1sid!2sid "
