--- a/berita.html
+++ b/berita.html
@@ -43,148 +43,192 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('/frontend/images/image1.jpg')"
-                >
-                  <a
-                    href="frontend/images/image1.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  >
-                  </a>
+          <div class="col-lg-12">
+            <div class="news-grid">
+              <div class="news-grid-image">
+                <img src="frontend/images/image3.jpg" />
+                <div class="news-grid-box">
+                  <h1>19</h1>
+                  <p>Sep</p>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('frontend/images/image5.jpg')"
-                >
-                  <a
-                    href="frontend/images/image5.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  ></a>
+              <div class="news-grid-txt">
+                <span>Finacne</span>
+                <h2>Heading Will Be Here</h2>
+                <ul>
+                  <li>
+                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
+                    2020
+                  </li>
+                  <li>
+                    <i class="icofont-ui-user" aria-hidden="true"></i> Admin
+                  </li>
+                </ul>
+                <div class="news-over">
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consequuntur aspernatur reprehenderit velit est voluptatum,
+                    voluptas amet quasi dicta consectetur.
+                  </p>
                 </div>
+                <div class="dropdown-divider"></div>
+                <a href="#">Read More...</a>
               </div>
             </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('frontend/images/image2.jpg')"
-                >
-                  <a
-                    href="frontend/images/image2.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  ></a>
+            <div class="news-grid">
+              <div class="news-grid-image">
+                <img src="frontend/images/image2.jpg" />
+                <div class="news-grid-box">
+                  <h1>19</h1>
+                  <p>Sep</p>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('frontend/images/image5.jpg')"
-                >
-                  <a
-                    href="frontend/images/image5.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  ></a>
+              <div class="news-grid-txt">
+                <span>Finacne</span>
+                <h2>Heading Will Be Here</h2>
+                <ul>
+                  <li>
+                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
+                    2020
+                  </li>
+                  <li>
+                    <i class="icofont-ui-user" aria-hidden="true"></i> Admin
+                  </li>
+                </ul>
+                <div class="news-over">
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consequuntur aspernatur reprehenderit velit est voluptatum,
+                    voluptas amet quasi dicta consectetur.
+                  </p>
                 </div>
+                <div class="dropdown-divider"></div>
+                <a href="#">Read More...</a>
               </div>
             </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('frontend/images/image3.jpg')"
-                >
-                  <a
-                    href="frontend/images/image3.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  ></a>
+
+            <div class="news-grid">
+              <div class="news-grid-image">
+                <img src="frontend/images/image3.jpg" />
+                <div class="news-grid-box">
+                  <h1>19</h1>
+                  <p>Sep</p>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('frontend/images/image4.jpg')"
-                >
-                  <a
-                    href="frontend/images/image4.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  ></a>
+              <div class="news-grid-txt">
+                <span>Finacne</span>
+                <h2>Heading Will Be Here</h2>
+                <ul>
+                  <li>
+                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
+                    2020
+                  </li>
+                  <li>
+                    <i class="icofont-ui-user" aria-hidden="true"></i> Admin
+                  </li>
+                </ul>
+                <div class="news-over">
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consequuntur aspernatur reprehenderit velit est voluptatum,
+                    voluptas amet quasi dicta consectetur.
+                  </p>
                 </div>
+                <div class="dropdown-divider"></div>
+                <a href="#">Read More...</a>
               </div>
             </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('frontend/images/image4.jpg')"
-                >
-                  <a
-                    href="frontend/images/image4.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  ></a>
+            <div class="news-grid">
+              <div class="news-grid-image">
+                <img src="frontend/images/image5.jpg" />
+                <div class="news-grid-box">
+                  <h1>19</h1>
+                  <p>Sep</p>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('frontend/images/image5.jpg')"
-                >
-                  <a
-                    href="/frontend/images/image5.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  ></a>
+              <div class="news-grid-txt">
+                <span>Finacne</span>
+                <h2>Heading Will Be Here</h2>
+                <ul>
+                  <li>
+                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
+                    2020
+                  </li>
+                  <li>
+                    <i class="icofont-ui-user" aria-hidden="true"></i> Admin
+                  </li>
+                </ul>
+                <div class="news-over">
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consequuntur aspernatur reprehenderit velit est voluptatum,
+                    voluptas amet quasi dicta consectetur.
+                  </p>
                 </div>
+                <div class="dropdown-divider"></div>
+                <a href="#">Read More...</a>
               </div>
             </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-2">
-            <div class="component-news d-block">
-              <div class="news-thumbnail">
-                <div
-                  class="news-image"
-                  style="background-image: url('/frontend/images/image4.jpg')"
-                >
-                  <a
-                    href="/frontend/images/image4.jpg"
-                    data-gall="Gallery"
-                    class="venobox d-flex justify-content-center"
-                  ></a>
+            <div class="news-grid">
+              <div class="news-grid-image">
+                <img src="frontend/images/image4.jpg" />
+                <div class="news-grid-box">
+                  <h1>19</h1>
+                  <p>Sep</p>
                 </div>
+              </div>
+              <div class="news-grid-txt">
+                <span>Finacne</span>
+                <h2>Heading Will Be Here</h2>
+                <ul>
+                  <li>
+                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
+                    2020
+                  </li>
+                  <li>
+                    <i class="icofont-ui-user" aria-hidden="true"></i> Admin
+                  </li>
+                </ul>
+                <div class="news-over">
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consequuntur aspernatur reprehenderit velit est voluptatum,
+                    voluptas amet quasi dicta consectetur.
+                  </p>
+                </div>
+                <div class="dropdown-divider"></div>
+                <a href="#">Read More...</a>
+              </div>
+            </div>
+            <div class="news-grid">
+              <div class="news-grid-image">
+                <img src="frontend/images/image5.jpg" />
+                <div class="news-grid-box">
+                  <h1>19</h1>
+                  <p>Sep</p>
+                </div>
+              </div>
+              <div class="news-grid-txt">
+                <span>Finacne</span>
+                <h2>Heading Will Be Here</h2>
+                <ul>
+                  <li>
+                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
+                    2020
+                  </li>
+                  <li>
+                    <i class="icofont-ui-user" aria-hidden="true"></i> Admin
+                  </li>
+                </ul>
+                <div class="news-over">
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consequuntur aspernatur reprehenderit velit est voluptatum,
+                    voluptas amet quasi dicta consectetur.
+                  </p>
+                </div>
+                <div class="dropdown-divider"></div>
+                <a href="#">Read More...</a>
               </div>
             </div>
           </div>
