--- a/berita.html
+++ b/berita.html
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-6 col-md-6 col-sm-2">
             <div class="news-grid">
               <div class="news-grid-image">
                 <img src="frontend/images/image3.jpg" />
@@ -75,38 +75,8 @@
                 <a href="#">Read More...</a>
               </div>
             </div>
-            <div class="news-grid">
-              <div class="news-grid-image">
-                <img src="frontend/images/image2.jpg" />
-                <div class="news-grid-box">
-                  <h1>19</h1>
-                  <p>Sep</p>
-                </div>
-              </div>
-              <div class="news-grid-txt">
-                <span>Finacne</span>
-                <h2>Heading Will Be Here</h2>
-                <ul>
-                  <li>
-                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
-                    2020
-                  </li>
-                  <li>
-                    <i class="icofont-ui-user" aria-hidden="true"></i> Admin
-                  </li>
-                </ul>
-                <div class="news-over">
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
-                    Consequuntur aspernatur reprehenderit velit est voluptatum,
-                    voluptas amet quasi dicta consectetur.
-                  </p>
-                </div>
-                <div class="dropdown-divider"></div>
-                <a href="#">Read More...</a>
-              </div>
-            </div>
-
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-2">
             <div class="news-grid">
               <div class="news-grid-image">
                 <img src="frontend/images/image3.jpg" />
@@ -138,9 +108,11 @@
                 <a href="#">Read More...</a>
               </div>
             </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-2">
             <div class="news-grid">
               <div class="news-grid-image">
-                <img src="frontend/images/image5.jpg" />
+                <img src="frontend/images/image3.jpg" />
                 <div class="news-grid-box">
                   <h1>19</h1>
                   <p>Sep</p>
@@ -169,40 +141,11 @@
                 <a href="#">Read More...</a>
               </div>
             </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-2">
             <div class="news-grid">
               <div class="news-grid-image">
-                <img src="frontend/images/image4.jpg" />
-                <div class="news-grid-box">
-                  <h1>19</h1>
-                  <p>Sep</p>
-                </div>
-              </div>
-              <div class="news-grid-txt">
-                <span>Finacne</span>
-                <h2>Heading Will Be Here</h2>
-                <ul>
-                  <li>
-                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
-                    2020
-                  </li>
-                  <li>
-                    <i class="icofont-ui-user" aria-hidden="true"></i> Admin
-                  </li>
-                </ul>
-                <div class="news-over">
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
-                    Consequuntur aspernatur reprehenderit velit est voluptatum,
-                    voluptas amet quasi dicta consectetur.
-                  </p>
-                </div>
-                <div class="dropdown-divider"></div>
-                <a href="#">Read More...</a>
-              </div>
-            </div>
-            <div class="news-grid">
-              <div class="news-grid-image">
-                <img src="frontend/images/image5.jpg" />
+                <img src="frontend/images/image3.jpg" />
                 <div class="news-grid-box">
                   <h1>19</h1>
                   <p>Sep</p>
